--- a/achterbase/serverless.yml
+++ b/achterbase/serverless.yml
@@ -8,6 +8,10 @@ plugins:
 provider:
   name: aws
   runtime: nodejs6.10
+  profile: cook-it-serverless-admin
+  region: eu-west-2
+  timeout: 1
+  memorySize: 128
 
 functions:
   second:
