Create DB and add read rights for lambda

--- a/achterbase/serverless.yml
+++ b/achterbase/serverless.yml
@@ -10,6 +10,13 @@ provider:
   name: aws
   runtime: nodejs8.10
   profile: cook-it-serverless-admin
+  environment:
+    DYNAMODB_TABLE: ${self:service}-${opt:stage, self:provider.stage}
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:Scan
+      Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.DYNAMODB_TABLE}"
   region: eu-west-2
   timeout: 1
   memorySize: 128
@@ -21,3 +28,21 @@ functions:
       - http:
           method: get
           path: recipes
+
+resources:
+  Resources:
+    RecipesDynamoDbTable:
+      Type: 'AWS::DynamoDB::Table'
+      Properties:
+        TableName: ${self:provider.environment.DYNAMODB_TABLE}
+        KeySchema:
+          -
+            AttributeName: id
+            KeyType: HASH
+        AttributeDefinitions:
+          -
+            AttributeName: id
+            AttributeType: S
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
