--- a/achterbase/serverless.yml
+++ b/achterbase/serverless.yml
@@ -11,14 +11,14 @@ provider:
   runtime: nodejs8.10
   profile: cook-it-serverless-admin
   environment:
-    DYNAMODB_TABLE: ${self:service}-${opt:stage, self:provider.stage}
+    RECIPES_TABLE: ${self:service}-${opt:stage, self:provider.stage}
   iamRoleStatements:
     - Effect: Allow
       Action:
         - dynamodb:Scan
-      Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.DYNAMODB_TABLE}"
+      Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.RECIPES_TABLE}"
   region: eu-west-2
-  timeout: 1
+  timeout: 2
   memorySize: 128
 
 functions:
@@ -34,7 +34,7 @@ resources:
     RecipesDynamoDbTable:
       Type: 'AWS::DynamoDB::Table'
       Properties:
-        TableName: ${self:provider.environment.DYNAMODB_TABLE}
+        TableName: ${self:provider.environment.RECIPES_TABLE}
         KeySchema:
           -
             AttributeName: id
