--- a/achterbase/package.json
+++ b/achterbase/package.json
@@ -15,5 +15,8 @@
     "webpack": "^3.3.0"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "aws-sdk": "^2.361.0"
+  }
 }
