--- a/achterbase/serverless.yml
+++ b/achterbase/serverless.yml
@@ -18,6 +18,7 @@ provider:
   timeout: 2
   memorySize: 128
 
+  //naar wat verwijst dit just?? backend? frontend?
 functions:
   getRecipes:
     handler: recipes.get
@@ -25,6 +26,7 @@ functions:
       - http:
           method: get
           path: recipes
+          cors: true
 
 resources:
   Resources:
@@ -47,3 +49,4 @@ resources:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: ${self:provider.environment.RECIPES_IMG_BUCKET}
+  
