--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: node_js
 before_install:
   # - npm install -g npm@11.2 
   - cd frokant
-  - nvm use
+  - nvm install
 
 before_script: cd frokant
 script: npm run build
