--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ deploy:
   github-token: $githubtoken
   on:
     branch: master
-  local_dir: dist
+  local_dir: frokant/dist
   fqdn: cook-it.poiters.be
